--- a/guinnessguideclient/public/index.html
+++ b/guinnessguideclient/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <script type="text/javascript"
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIcoS4oZ5XRjLwdGCIFzcfIIqe3xlOX7g">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIcoS4oZ5XRjLwdGCIFzcfIIqe3xlOX7g&libraries=places">
     </script>
 
     <!--
