--- a/guinnessguideclient/public/index.html
+++ b/guinnessguideclient/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v=2">
     <script type="text/javascript"
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIcoS4oZ5XRjLwdGCIFzcfIIqe3xlOX7g&libraries=places">
     </script>
